[package]
authors = ["Tharun Kumar <rocknpaper00@gmail.com>"]
edition = "2018"
name = "backend"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-multipart = "0.3.0"
actix-rt = "1.0"
actix-service = "1"
actix-web = "3"
bson = "1.1.0"
chrono = "0.4"
dotenv = "0.14.1"
env_logger = "0.7.1"
futures = "0.3"
jsonwebtoken = "7.2.0"
listenfd = "0.3"
mongodb = "1.1.0"
rust-s3 = "0.23.0"
serde = "1.0.105"
serde_json = "1.0.57"
async-std = "1.6.3"
bytes = { version = "0.5", features = ["serde"] }
actix-cors = "0.3.0"
bcrypt="0.8.2"